objects/REVVY__MnStrategy1__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Fee__c</fullName>
        <label>Admin Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AllowSupportPlus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Support Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicableProductsLong__c</fullName>
        <label>Applicable Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplicableProducts__c</fullName>
        <label>Applicable Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blended_DNet_Threshold__c</fullName>
        <description>Threshold for blended DNet %</description>
        <label>Blended DNet % Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>If the pricing program is based on the contract, this is the contract number</description>
        <label>Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_message__c</fullName>
        <description>Enter the message that would display when price program is selected.</description>
        <inlineHelpText>Enter the message that would display when price program is selected.</inlineHelpText>
        <label>Contract message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Toro Pricing Programs</relationshipLabel>
        <relationshipName>Toro_Pricing_Programs_mp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentDate__c</fullName>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Determines_Support_Plus_Allowance__c</fullName>
        <label>Determines Support Plus Allowance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Total DNet Only</fullName>
                    <default>true</default>
                    <label>Total DNet Only</label>
                </value>
                <value>
                    <fullName>Award Only</fullName>
                </value>
                <value>
                    <fullName>Total DNet and Award</fullName>
                    <label>Percent DNet and Award</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DrivenByGP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pay by GP % and not Rebate %</description>
        <label>DrivenByGP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude From Display</description>
        <inlineHelpText>Exclude From Display</inlineHelpText>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Please enter the unique External ID. Only Alpha-numberical characters are allowed. Ex. You can copy the name of the pricing program and remove all spaces and special characters.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Children Pricing Programs in Secondary Pricing Program Picklist</description>
        <label>Hide Children from Secondary Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstTee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a first tee pricing program?  This flag is used in pricing program eligibility logic.</description>
        <label>Is First Tee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTaxSupported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a tax supported pricing program? This flag is used in pricing program eligibility logic.</description>
        <label>Is Tax Supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MinimumThreshold__c</fullName>
        <description>Minimum threshold for a pricing program to be seen in pricing program pick list.</description>
        <label>Minimum Package Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinimumTractionUnits__c</fullName>
        <description>Used by Small Package Restriction:
Package must be &gt;$50,000 at DN AND a minimum of 2 traction units.</description>
        <label>Minimum Traction Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutCrossThreshold__c</fullName>
        <description>Minimum dollar amount threshold for Large Package that has OutCross.</description>
        <label>OutCross Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverriddenPriceList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overridden Price List</label>
        <referenceTo>REVVY__MnPriceList__c</referenceTo>
        <relationshipLabel>Toro Pricing Programs</relationshipLabel>
        <relationshipName>Toro_Pricing_Programs_mp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Pricing Program</description>
        <label>Parent Program</label>
        <referenceTo>REVVY__MnStrategy1__c</referenceTo>
        <relationshipLabel>Toro Pricing Programs</relationshipLabel>
        <relationshipName>Toro_Pricing_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PricingProgramStyle__c</fullName>
        <label>Pricing Program Style</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PricingProgramType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Base_w_no_Price_Increase</fullName>
                </value>
                <value>
                    <fullName>Base_w_Qty_Pricing</fullName>
                </value>
                <value>
                    <fullName>Base_w_Support_Plus</fullName>
                </value>
                <value>
                    <fullName>Chart</fullName>
                </value>
                <value>
                    <fullName>Price_List</fullName>
                </value>
                <value>
                    <fullName>Base_w_Model_Pricing</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standrad_w_Exception</fullName>
                </value>
                <value>
                    <fullName>Standard_w_TPP</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>NAF</fullName>
                </value>
                <value>
                    <fullName>Large_Package</fullName>
                </value>
                <value>
                    <fullName>New_Construction_Renovation_LP</fullName>
                </value>
                <value>
                    <fullName>Market_Chart</fullName>
                </value>
                <value>
                    <fullName>Small_Package</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Southern_Demo</fullName>
                </value>
                <value>
                    <fullName>First_Tee</fullName>
                </value>
                <value>
                    <fullName>Equipment_Partnership_0-6_Months</fullName>
                </value>
                <value>
                    <fullName>Equipment_Partnership_7-9_Months</fullName>
                </value>
                <value>
                    <fullName>Equipment_Partnership_10-18_Months</fullName>
                </value>
                <value>
                    <fullName>Stock_Order_Demo_Program</fullName>
                </value>
                <value>
                    <fullName>Equipment_Partnership</fullName>
                </value>
                <value>
                    <fullName>Base_w_Quantity_Mdl_Pricing</fullName>
                    <label>Base w qty model pricing</label>
                </value>
                <value>
                    <fullName>Performance_Part</fullName>
                    <label>Performance Part</label>
                </value>
                <value>
                    <fullName>Base_w_Award_Accessories</fullName>
                </value>
                <value>
                    <fullName>Base_w_Model_Qty_Pricing</fullName>
                </value>
                <value>
                    <fullName>Standard_Support_Chart</fullName>
                    <label>Standard Support Chart</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PricingProgramType__c</fullName>
        <label>Pricing Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Support Chart</fullName>
                </value>
                <value>
                    <fullName>Corporate Account</fullName>
                </value>
                <value>
                    <fullName>Performance Part</fullName>
                </value>
                <value>
                    <fullName>State Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryProgram__c</fullName>
        <description>Copy the External ID of the pricing program to be used as secondary program as a value in this picklist.</description>
        <label>Secondary Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>EquipmentPartnership</fullName>
                </value>
                <value>
                    <fullName>SouthernDemo</fullName>
                </value>
                <value>
                    <fullName>StockOrderDemoProgram</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SelectProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to lookup a product</description>
        <label>Select Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Enter the Traction unit name or ID</errorMessage>
            <filterItems>
                <field>REVVY__MnCatalogNode__c.REVVY__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnCatalogNode__c.Toro_Product_Type__c</field>
                <operation>equals</operation>
                <value>Finished Good</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>Pricing Programs</relationshipLabel>
        <relationshipName>PricingPrograms_mp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Setup Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ShowSecondaryProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Secondary Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UseDesignatedPriceList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Designated Price List</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>